# muse

./: .gitignore  AUTHOR  README.rst
data/: README.rst
lab/cs231n/: Makefile
lab/cs231n/data/: datasets.py
lab/cs231n/data/tests/: test_datasets.py
lab/cs231n/demos/: knn.py
lab/cs231n/models/algorithms/: distances.py
lab/cs231n/models/classifiers/: k_nearest_neighbor.py
labs/cs231n/: main.py  settings.py
labs/cs231n/demos/: knn.py
muse/: CMakeLists.txt
muse/cmake/: enableCXX11.cmake
muse/muse/: CMakeLists.txt  main.cpp
muse/muse/mathart/: CMakeLists.txt  mathart.cpp  mathart.h
